Bare minimum project showing Java 16 doesn't work
Inside docker